WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
273410
Fix test indicator position for site-isolated performImmediateActionHitTestAtLocation
https://bugs.webkit.org/show_bug.cgi?id=273410
Summary
Fix test indicator position for site-isolated performImmediateActionHitTestAt...
pascoe@apple.com
Reported
2024-04-29 09:47:02 PDT
The indicator currently appears offset because it's using the iframe's position. We consult the parent process to fix.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-04-29 09:47:22 PDT
<
rdar://problem/127238645
>
pascoe@apple.com
Comment 2
2024-04-29 09:50:47 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/27879
EWS
Comment 3
2024-05-01 09:42:25 PDT
Committed
278210@main
(0ead2727f1b4): <
https://commits.webkit.org/278210@main
> Reviewed commits have been landed. Closing PR #27879 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug