Fix test indicator position for site-isolated performImmediateActionHitTestAtLocation https://bugs.webkit.org/show_bug.cgi?id=273410 rdar://127120734

Reviewed by Sihui Liu.

Currently the actions resulting from performImmediateActionHitTestAtLocation have an offset
position, because they are placed relative to the iframe. To fix this, we consult the parent
processes to calculate the position relative to the main frame.

* Source/WebKit/UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::didPerformImmediateActionHitTest):
* Source/WebKit/UIProcess/WebPageProxy.h:
* Source/WebKit/WebProcess/WebPage/WebPage.cpp:
(WebKit::WebPage::remoteDictionaryPopupInfoToRootView):
* Source/WebKit/WebProcess/WebPage/WebPage.h:
* Source/WebKit/WebProcess/WebPage/WebPage.messages.in:

Canonical link: https://commits.webkit.org/278210@main